# bg-database

./: Makefile  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml
app/: README.md
app/application/usecase/: fetch_hero_usecase.py  fetch_master_usecase.py
app/application/usecase/auth/: login_usecase.py
app/application/usecase/dto/: base.py
app/domain/: exceptions.py
app/domain/entity/: __init__.py  anomaly.py  base.py  hero.py  user.py  user_profile.py
app/domain/repository_interface/: __init__.py  anomaly_repository_interface.py  hero_repository_interface.py  user_repository_interface.py
app/domain/value_object/: __init__.py  anomaly_id.py  base.py  hero_id.py  user_id.py  user_profile_id.py
app/infrastructure/auth/: google.py
app/infrastructure/controller/: __init__.py  anomaly_controller.py  login_controller.py  logout_controller.py
app/infrastructure/db/: __init__.py  table_schema.py
app/infrastructure/db/supabase/: supabase_client.py  supabase_settings.py
app/infrastructure/repository/: anomaly_repository.py  hero_repository.py  user_repository.py
app/infrastructure/repository/internal/: google_spread_sheet_repository.py
src/: App.tsx  main.tsx
src/components/Graph/: LineChart.tsx  index.ts
src/components/SideBar/: Content.tsx  Frame.tsx  NavItem.tsx  index.ts
src/features/BattleHistory/: hooks.ts  type.ts
src/features/BattleHistory/LineChart/: Chart.tsx  hooks.ts  index.ts
src/pages/Home/: index.ts  presenter.tsx
test/application/usecase/: test_fetch_hero_usecase.py
test/domain/entity/: test_hero.py
test/infrastructure/repository/: test_anomaly.py
test/mock/repository/: mock_hero_repository.py
